; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/extr_hplance.c_hplance_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/extr_hplance.c_hplance_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.lance_private = type { i64 }

@HPLANCE_STATUS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @hplance_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hplance_close(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.lance_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.lance_private* @netdev_priv(%struct.net_device* %4)
  store %struct.lance_private* %5, %struct.lance_private** %3, align 8
  %6 = load %struct.lance_private*, %struct.lance_private** %3, align 8
  %7 = getelementptr inbounds %struct.lance_private, %struct.lance_private* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @HPLANCE_STATUS, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @out_8(i64 %10, i32 0)
  %12 = load %struct.net_device*, %struct.net_device** %2, align 8
  %13 = call i32 @lance_close(%struct.net_device* %12)
  ret i32 0
}

declare dso_local %struct.lance_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @out_8(i64, i32) #1

declare dso_local i32 @lance_close(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
